--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,8 @@
         "@fastify/cors": "^8.1.0",
         "@fastify/helmet": "^10.0.0",
         "@fastify/static": "^6.5.0",
+        "@mgcrea/fastify-request-logger": "^0.6.1",
+        "@mgcrea/pino-pretty-compact": "^0.6.0",
         "@nestjs/cli": "^8.2.8",
         "@nestjs/common": "^8.4.7",
         "@nestjs/core": "^8.4.7",
@@ -30,7 +32,6 @@
         "@trpc/client": "10.0.0-proxy-beta.9",
         "@trpc/server": "10.0.0-proxy-beta.9",
         "astro": "^1.4.0",
-        "axios": "^0.27.2",
         "cache-manager": "^4.1.0",
         "html-escaper": "^3.0.3",
         "kleur": "^4.1.5",
