--- a/backend/package.json
+++ b/backend/package.json
@@ -1,71 +1,47 @@
 {
-    "name": "backend",
-    "version": "0.0.1",
+    "name": "fastify-only",
+    "version": "1.0.0",
     "description": "",
-    "author": "",
-    "private": true,
-    "license": "UNLICENSED",
     "scripts": {
-        "prebuild": "rimraf dist",
-        "build": "nest build && pnpm postbuild",
-        "postbuild": "node dist/postbuild.js",
-        "format": "prettier --write \"src/**/*.ts\" ",
-        "start": "pnpm format && pnpm build && nest start",
-        "start:dev": "pnpm format && pnpm build && nest start --watch",
-        "start:debug": "nest start --debug --watch",
-        "start:prod": "pnpm build && node dist/main",
-        "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+        "build": "tsc src/main.ts src/postbuild.ts --outDir ./dist && node dist/postbuild.js",
+        "start:dev": "nodemon -e ts,js,mjs,json --watch \"src\" --ignore \"dist\" --ignore \"node_modules\" --exec \"pnpm build && node dist/main.js \""
     },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
     "dependencies": {
         "@astrojs/node": "^1.1.0",
-        "@fastify/cors": "^8.1.0",
-        "@fastify/helmet": "^10.0.1",
+        "@fastify/middie": "^8.0.0",
         "@fastify/static": "^6.5.0",
         "@mgcrea/fastify-request-logger": "^0.6.1",
         "@mgcrea/pino-pretty-compact": "^0.6.0",
-        "@nestjs/cli": "^8.2.8",
-        "@nestjs/common": "^8.4.7",
-        "@nestjs/core": "^8.4.7",
-        "@nestjs/platform-express": "^8.4.7",
-        "@nestjs/platform-fastify": "^9.1.4",
-        "@nestjs/serve-static": "^3.0.0",
-        "@trpc/client": "10.0.0-proxy-beta.9",
-        "@trpc/server": "10.0.0-proxy-beta.9",
-        "astro": "^1.4.5",
-        "cache-manager": "^4.1.0",
+        "@trpc/client": "10.0.0-proxy-beta.15",
+        "@trpc/server": "10.0.0-proxy-beta.15",
+        "astro": "^1.4.4",
+        "connect": "^3.7.0",
+        "cookie": "^0.5.0",
+        "date-fns": "^2.29.3",
+        "etag": "^1.8.1",
+        "fastify": "^4.7.0",
         "html-escaper": "^3.0.3",
+        "image-size": "^1.0.2",
         "kleur": "^4.1.5",
         "mime": "^3.0.0",
+        "mrmime": "^1.0.1",
         "path-browserify": "^1.0.1",
         "path-to-regexp": "^6.2.1",
-        "reflect-metadata": "^0.1.13",
-        "rimraf": "^3.0.2",
-        "rxjs": "^7.5.7",
+        "pdfmake": "^0.2.5",
+        "sharp": "^0.31.1",
+        "slash": "^5.0.0",
         "solid-js": "^1.5.7",
-        "source-map-support": "^0.5.21",
-        "string-width": "^5.1.2"
+        "string-width": "^5.1.2",
+        "tiny-glob": "^0.2.9"
     },
     "devDependencies": {
-        "@nestjs/schematics": "^8.0.11",
-        "@nestjs/testing": "^8.4.7",
-        "@types/cache-manager": "^4.0.2",
-        "@types/express": "^4.17.14",
-        "@types/jest": "27.5.0",
-        "@types/node": "^16.11.64",
-        "@types/supertest": "^2.0.12",
-        "@typescript-eslint/eslint-plugin": "^5.39.0",
-        "@typescript-eslint/parser": "^5.39.0",
-        "eslint": "^8.24.0",
-        "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-prettier": "^4.2.1",
-        "jest": "28.0.3",
-        "prettier": "^2.7.1",
-        "supertest": "^6.3.0",
-        "ts-jest": "28.0.1",
-        "ts-loader": "^9.4.1",
+        "@tsconfig/recommended": "^1.0.1",
+        "@types/node": "^18.8.2",
+        "nodemon": "^2.0.20",
         "ts-node": "^10.9.1",
-        "tsconfig-paths": "4.0.0",
-        "typescript": "^4.8.4",
-        "webpack": "^5.74.0"
+        "typescript": "^4.8.4"
     }
 }
