--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
     "license": "ISC",
     "dependencies": {
         "@astrojs/node": "^1.1.0",
+        "@fastify/cors": "^8.1.0",
+        "@fastify/helmet": "^10.0.1",
         "@fastify/middie": "^8.0.0",
         "@fastify/static": "^6.5.0",
         "@mgcrea/fastify-request-logger": "^0.6.1",
